# leetcode-animefy

./: .gitignore  .todo  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy-app.yml  deploy-base.yml  deploy.yml  push-image.yml
app/: .env.example  Dockerfile  asgi.py  config.json  main.py  pyproject.toml  requirements.txt
app/core/: cache.py  config.py  database.py  leetcode.py  llm.py  logger.py  server.py
app/core/discord/: bot.py  user.py
app/managers/: guild_data.py  leetcode_manager.py  prompt_data.py  session_data.py
app/middlewares/: auth_middleware.py  guild_dependency.py  scheduler_dependency.py
app/models/: auth.py  discord.py  guild.py  leetcode.py
app/prompts/: battle.txt  intro.txt  solo.txt
app/routes/: __init__.py  auth_router.py  guild_router.py  schedule_router.py
app/services/: guild_service.py  leetcode_service.py  plot_service.py
app/utils/: naming.py  validators.py
core/: cache.py  config.py  database.py  discord_bot.py  discord_user.py  logger.py  server.py
core/discord/: bot.py  user.py
infra/: base.yaml  deploy.yaml  deployment.yaml  main.tf  outputs.tf  variables.tf
managers/: guild_data.py
middlewares/: auth_middleware.py  guild_dependency.py
models/: auth.py  discord.py  guild.py
routes/: guild_router.py
services/: guild_service.py
