[project]
name = "leetcode-animefy-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10 <3.13"
dependencies = [
    "py-cord (>=2.6.1,<3.0.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rich (>=14.0.0,<15.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "upstash-redis (>=1.4.0,<2.0.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
